Annotation right side cutoff fix

--- a/app/assets/stylesheets/boot-docs.css.scss
+++ b/app/assets/stylesheets/boot-docs.css.scss
@@ -206,7 +206,7 @@ a.texttitle {
 #annotation-well ul#annotation-list li {
 	font-size: 12px;
 	font-style: normal;
-  width: 340px;
+  width: 320px;
 	font-weight: 400;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 	padding: 2px 5px;
